--- a/2020-07-01-how-to-write-hooks-like-component-in-redux/index.html
+++ b/2020-07-01-how-to-write-hooks-like-component-in-redux/index.html
@@ -37,7 +37,7 @@ export default connect(
         </deckgo-highlight-code>
       
 <p>最终效果如下：</p>
-<p><img src="https://user-gold-cdn.xitu.io/2020/7/1/1730795a97cf6eff?w=374&#x26;h=202&#x26;f=gif&#x26;s=28977"></p>
+<p><img src="/db2f8c884eafdce3cd6a8e006d766654/redux-hooks-1.gif"></p>
 <p>那么，接下来我们尝试把这个组件重构成hooks风格的redux组件。</p>
 <h4>第一步：重构成函数组件</h4>
 <p>用函数来代替class组件，并且我们将ui和toggleSwitch从组件属性中解构出来，这一步相对简单，代码也得到了极大的缩减。</p>
